--- a/server/package.json
+++ b/server/package.json
@@ -1,10 +1,13 @@
 {
   "name": "math-repository-server",
+  "type": "module",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "node index.js",
+    "start": "nodemon index.js"
   },
   "author": "Andre Tremetsberger",
   "license": "ISC",
