--- a/server/package.json
+++ b/server/package.json
@@ -1,17 +1,21 @@
 {
   "name": "math-repository-server",
-  "type": "module",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node index.js",
-    "start": "nodemon index.js"
+    "start": "ts-node src/index.ts"
   },
+  "keywords": [],
   "author": "Andre Tremetsberger",
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5"
   }
 }
