--- a/server/package.json
+++ b/server/package.json
@@ -5,17 +5,21 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node src/index.ts"
+    "start": "node build/index.js",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "Andre Tremetsberger",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2"
+    "config": "^3.3.11",
+    "express": "^4.19.2",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
+    "@types/config": "^3.3.4",
     "@types/express": "^4.17.21",
-    "ts-node": "^10.9.2",
+    "@types/mysql": "^2.15.26",
     "typescript": "^5.4.5"
   }
 }
